--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@config-plugins/react-native-adjust": "^9.0.0",
     "@expo/vector-icons": "~14.0.4",
     "@lucide/lab": "^0.1.2",
+    "@posthog/core": "^1.3.0",
     "@react-native-async-storage/async-storage": "1.23.1",
     "@react-native-picker/picker": "2.9.0",
     "@react-navigation/native": "^7.0.14",
@@ -54,7 +55,7 @@
     "lucide-react-native": "^0.475.0",
     "mixpanel-react-native": "^3.1.2",
     "next": "^15.3.2",
-    "posthog-react-native": "^4.4.0",
+    "posthog-react-native": "^4.10.1",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-native": "^0.76.9",
