Simplify sign-up process and rebrand to Copy That
Major Changes:
- Replace OTP verification with password authentication for sign-up and sign-in
- Add profile picture upload step to sign-up flow
- Change username field to 'first name' in UI labels
- Replace onboarding slideshow images with simple text-based steps
- Integrate voice cloning into onboarding (replace mic permission screen)
- Remove friends onboarding screen from flow
- Add orbiting emoji animation to welcome screen with large centered logo

UI/UX Improvements:
- Always show tab bar (removed voice clone requirement)
- Add sign out button under record voice on home screen
- Change voice clone badge from orange mic to green checkmark
- Update feed toggle to display emojis properly
- Extend group name character limit in feed title from 10 to 11 chars

Bug Fixes:
- Fix password screen to sign in existing users before proceeding to sign-up
- Fix story ownership checks for cloned voice stories (owner can delete)
- Display cloned voice user's name/avatar on story cards
- Fix voice selector to show 'Your Voice' and only other group members
- Fix audio format mismatch for cloned voices (MP3 vs M4A)
- Remove invalid UUID query that caused errors

Branding:
- Update app name from 'HMO-Copy' to 'Copy That'
- Update all permission descriptions and app references

--- a/app.json
+++ b/app.json
@@ -1,11 +1,11 @@
 {
   "expo": {
-    "name": "HMO-Copy",
-    "slug": "hmocopy",
+    "name": "Copy That",
+    "slug": "copythat",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/images/icon.png",
-    "scheme": "hmocopy",
+    "scheme": "copythat",
     "userInterfaceStyle": "automatic",
     "splash": {
       "image": "./assets/images/logo.png",
@@ -19,10 +19,10 @@
       "buildNumber": "1",
       "usesAppleSignIn": false,
       "infoPlist": {
-        "NSMicrophoneUsageDescription": "Hear Me Out Copy needs microphone access to record and share your voice stories with friends. Your audio recordings are the core feature of our social platform.",
+        "NSMicrophoneUsageDescription": "Copy That needs microphone access to record and share your voice stories with friends. Your audio recordings are the core feature of our social platform.",
         "NSCameraUsageDescription": "We need access to your camera to take profile pictures",
         "ITSAppUsesNonExemptEncryption": false,
-        "NSPhotoLibraryUsageDescription": "Hear Me Out Copy needs gallery permission to pick and upload your profile picture.",
+        "NSPhotoLibraryUsageDescription": "Copy That needs gallery permission to pick and upload your profile picture.",
         "NSUserTrackingUsageDescription": "We need tracking permission to get analytics to improve the user experience."
       },
       "appleTeamId": "N8SACG5845"
@@ -42,13 +42,13 @@
       [
         "expo-image-picker",
         {
-          "photosPermission": "Hear Me Out Copy would like access to your photos to upload a profile picture and personalize your account."
+          "photosPermission": "Copy That would like access to your photos to upload a profile picture and personalize your account."
         }
       ],
       [
         "expo-audio",
         {
-          "microphonePermission": "Hear Me Out Copy needs microphone access to record and share your voice stories with friends. Your audio recordings are the core feature of our social platform."
+          "microphonePermission": "Copy That needs microphone access to record and share your voice stories with friends. Your audio recordings are the core feature of our social platform."
         }
       ]
     ],
