Fix navigation errors and UUID issues
- Fixed UUID error when signing out by adding null checks for user.id
- Removed premature navigation in auth context to prevent 'before mounting' error
- Added loading states to prevent navigation before app is ready
- Added error boundaries to catch crashes
- Disabled new architecture and enabled Apple Sign In in app.json
- Added proper error handling throughout auth flow

--- a/app.json
+++ b/app.json
@@ -13,12 +13,12 @@
       "backgroundColor": "#FFFFFF",
       "imageWidth": 0.5
     },
-    "newArchEnabled": true,
+    "newArchEnabled": false,
     "ios": {
       "supportsTablet": false,
       "bundleIdentifier": "media.hilo.hearmeoutcopy",
       "buildNumber": "1",
-      "usesAppleSignIn": false,
+      "usesAppleSignIn": true,
       "infoPlist": {
         "NSMicrophoneUsageDescription": "Copy That needs microphone access to record and share your voice stories with friends. Your audio recordings are the core feature of our social platform.",
         "NSCameraUsageDescription": "We need access to your camera to take profile pictures",
