Disable Adjust and Apple Sign In to fix splash screen crash
- Disabled Apple Sign In in app.json
- Removed Adjust plugin from app.json
- Commented out Adjust tracking functions
- Added error handling to tracking initialization
- This should fix the native crash on splash screen

--- a/app.json
+++ b/app.json
@@ -18,7 +18,7 @@
       "supportsTablet": false,
       "bundleIdentifier": "media.hilo.hearmeoutcopy",
       "buildNumber": "1",
-      "usesAppleSignIn": true,
+      "usesAppleSignIn": false,
       "infoPlist": {
         "NSMicrophoneUsageDescription": "Copy That needs microphone access to record and share your voice stories with friends. Your audio recordings are the core feature of our social platform.",
         "NSCameraUsageDescription": "We need access to your camera to take profile pictures",
@@ -36,7 +36,6 @@
     "plugins": [
       "expo-router",
       "expo-secure-store",
-      "@config-plugins/react-native-adjust",
       "expo-tracking-transparency",
       "expo-font",
       "expo-localization",
