--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@react-native-async-storage/async-storage": "1.23.1",
     "@react-native-picker/picker": "2.9.0",
     "@react-navigation/native": "^7.0.14",
+    "@sentry/react-native": "^7.4.0",
     "@supabase/supabase-js": "^2.39.3",
     "@svanboxel/visibility-sensor-react-native": "^1.0.2",
     "base64-arraybuffer": "^1.0.2",
