--- a/app.json
+++ b/app.json
@@ -37,8 +37,7 @@
       "expo-router",
       "expo-secure-store",
       "expo-tracking-transparency",
-      "expo-font",
-      "expo-localization",
+      "expo-font", 
       [
         "expo-image-picker",
         {
@@ -71,8 +70,12 @@
       "permissions": [
         "com.google.android.gms.permission.AD_ID",
         "android.permission.RECORD_AUDIO",
+        "android.permission.MODIFY_AUDIO_SETTINGS",
+        "com.google.android.gms.permission.AD_ID",
+        "android.permission.RECORD_AUDIO",
         "android.permission.MODIFY_AUDIO_SETTINGS"
-      ]
+      ],
+      "package": "media.hilo.hearmeoutcopy"
     }
   }
 }
