--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "@react-native-async-storage/async-storage": "1.23.1",
     "@react-native-picker/picker": "2.9.0",
     "@react-navigation/native": "^7.0.14",
-    "@sentry/react-native": "^7.4.0",
+    "@sentry/react-native": "~6.10.0",
     "@supabase/supabase-js": "^2.39.3",
     "@svanboxel/visibility-sensor-react-native": "^1.0.2",
     "base64-arraybuffer": "^1.0.2",
@@ -41,7 +41,6 @@
     "expo-image-picker": "~16.0.6",
     "expo-linear-gradient": "~14.0.2",
     "expo-linking": "~7.0.5",
-    "expo-localization": "~16.0.1",
     "expo-notifications": "~0.29.14",
     "expo-router": "~4.0.21",
     "expo-secure-store": "~14.0.1",
