--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "@react-native-picker/picker": "2.9.0",
     "@react-navigation/native": "^7.0.14",
     "@sentry/react-native": "~6.10.0",
-    "@supabase/supabase-js": "^2.39.3",
+    "@supabase/supabase-js": "^2.77.0",
     "@svanboxel/visibility-sensor-react-native": "^1.0.2",
     "base64-arraybuffer": "^1.0.2",
     "buffer": "^6.0.3",
@@ -46,6 +46,7 @@
     "expo-secure-store": "~14.0.1",
     "expo-splash-screen": "~0.29.24",
     "expo-status-bar": "~2.0.1",
+    "expo-store-review": "~8.0.1",
     "expo-symbols": "^0.2.2",
     "expo-system-ui": "~4.0.9",
     "expo-tracking-transparency": "~5.1.1",
